--- a/saitae-web/src/main/webapp/pages/lictp.xhtml
+++ b/saitae-web/src/main/webapp/pages/lictp.xhtml
@@ -21,7 +21,9 @@
                     <h1 style="align-content: center;">Administración de Permisos y Licencias.</h1>
                     <p:tabView id="tw" orientation="left" dynamic="true" style="height: 100%; width: 90%;">
                         <p:tab title="Tipo Permisos">
-                            <p:dataTable id="tp1" widgetVar="tipos" var="tp" value="#{tipoController.all}" 
+                            <p:dataTable id="tp1" widgetVar="tipos" var="tp" value="#{tipoController.all}"
+                                         paginator="true" paginatorAlwaysVisible="false" rows="10"
+                                         paginatorPosition="top"
                                          editable="true" styleClass="tabla" emptyMessage="Sin registros aún.">
                                 <f:facet name="header">
                                     Administración de los tipos de permisos
@@ -62,7 +64,7 @@
                                 </p:column>
 
                                 <p:column style="width:32px">
-                                    <p:rowEditor />
+                                    <p:rowEditor cancelTitle="Cancelar" editTitle="Editar" saveTitle="Guardar"/>
                                 </p:column>
                             </p:dataTable>
                             <p:commandButton value="+" styleClass="ui-priority-primary" 
@@ -91,7 +93,8 @@
                         <p:tab id="tab4" title="Tipos Permisos por Usuarios">
                             <h:panelGrid id="pg" columns="2">
                                 <h:outputLabel for="pers" value="Tipo de Usuario: " />
-                                <p:selectOneMenu id="pers" required="true" value="#{tipoController.tipoPersona.idtipoPersona}">
+                                <p:selectOneMenu id="pers" required="true" filter="true"
+                                                 value="#{tipoController.tipoPersona.idtipoPersona}">
                                     <f:selectItems value="#{tipoController.tiposPersonas}" />
                                     <p:ajax event="itemSelect" listener="#{tipoController.onItemSelect(event)}" 
                                             update="pickList" />
@@ -99,7 +102,11 @@
 
                                 <h:outputLabel for="pickList" value="Tipos de Permisos"/>
                                 <p:pickList id="pickList" value="#{tipoController.model}" var="perm" 
-                                            itemLabel="#{perm}" itemValue="#{perm}">
+                                            itemLabel="#{perm}" itemValue="#{perm}" 
+                                            addAllLabel="Agregar Todos" addLabel="Agregar"
+                                            filterDelay="10" removeAllLabel="Quitar todos"
+                                            removeLabel="Quitar" responsive="true" 
+                                            showCheckbox="true">
                                     <f:facet name="sourceCaption">Disponibles</f:facet>
                                     <f:facet name="targetCaption">Asignados</f:facet>
                                 </p:pickList>
