--- a/saitae-web/src/main/webapp/pages/repInv.xhtml
+++ b/saitae-web/src/main/webapp/pages/repInv.xhtml
@@ -24,7 +24,9 @@
                 </h:panelGrid>
                 <p:dataTable id="inv" value="#{repInvController.recursos}" var="r"
                              emptyMessage="Sin registros" stickyHeader="true" 
-                             rendered="#{repInvController.verInvBiblio}">
+                             rendered="#{repInvController.verInvBiblio}"
+                             paginator="true" paginatorPosition="top" paginatorAlwaysVisible="false"
+                             rows="6" reflow="true">
                     <f:facet name="header">
                         <h:outputText value="Inventario de recursos #{repInvController.trSelected.tipoRecursoNombre}"/>
                     </f:facet>
@@ -33,22 +35,18 @@
                     </f:facet>
                     <p:column headerText="Cargo" width="5%"
                               rendered="#{repInvController.trSelected.idtipoRecurso==3}"
-                              filterBy="#{r.tipoCargo.idtipoCargo}">
-                        <h:outputText value="#{r.tipoCargo.idtipoCargo}" />
+                              filterBy="1-#{r.tipoCargo.idtipoCargo}">
+                        <h:outputText value="1-#{r.tipoCargo.idtipoCargo}" />
                     </p:column>
-                    <p:column headerText="Código"  width="10%">
-                        <h:outputText value="#{r.categoria.idcategoria}-#{r.idrecurso}"/>
-                    </p:column>
-                    <p:column headerText="Nombre">
-                        <h:outputText value="#{r.nombre}"/>
+                    <p:column headerText="Código"  width="10%"
+                              filterBy="#{repInvController.CodToString(r.idrecurso, 3, false)}">
+                        <h:outputText value="#{repInvController.CodToString(r.idrecurso, 3, false)}"/>
                     </p:column>
                     <p:column headerText="Correlativos" width="8%">
                         <h:outputText value="#{repInvController.getCorrelativos(r.ejemplarList)}"/>
                     </p:column>
-                    <p:column headerText="Categoría" width="7%"
-                              filterBy="#{r.categoria.idcategoria}"
-                              rendered="#{repInvController.trSelected.idtipoRecurso==3}">
-                        <h:outputText value="#{r.categoria.idcategoria}"/>
+                    <p:column headerText="Nombre" filterBy="#{r.nombre}">
+                        <h:outputText value="#{r.nombre}"/>
                     </p:column>
                     <p:column headerText="Autor"
                               filterBy="#{repInvController.getAutores(r.autorLibroList)}"
@@ -75,11 +73,11 @@
                     <p:column headerText="Valor Unitario" width="6%">
                         <h:outputText value="$#{r.valorUnitario}"/>
                     </p:column>
-                    <p:column headerText="Tipo de Valor" width="8%">
-                        <h:outputText value="#{r.tipoValor}"/>
-                    </p:column>
                     <p:column headerText="Valor Total" width="8%">
                         <h:outputText value="$#{repInvController.getTotalRecurso(r)}"/>
+                    </p:column>
+                    <p:column headerText="Tipo de Valor" width="8%">
+                        <h:outputText value="#{r.tipoValor}"/>
                     </p:column>
                 </p:dataTable>
                 <h:commandLink rendered="#{repInvController.verInvBiblio}">
@@ -90,7 +88,7 @@
                                     encoding="UTF-8"
                                     postProcessor="#{repInvController.reporte}"/>
                 </h:commandLink>
-                
+
                 <p:dataTable id="invCra" value="#{repInvController.ejemplares}" var="e"
                              emptyMessage="Sin registros" stickyHeader="true" 
                              rendered="#{repInvController.verInvCRA}">
@@ -101,8 +99,9 @@
                         <h:outputText value="Valor total estimado: $#{repInvController.totalGeneral}"/>
                     </f:facet>
                     <p:column headerText="Código"  width="13%"
-                              filterBy="#{e.ejemplarPK.idRecurso}#{e.ejemplarPK.ejemplarCorrelativo}">
-                        <h:outputText value="#{e.ejemplarPK.idRecurso}#{e.ejemplarPK.ejemplarCorrelativo}"/>
+                              filterBy="#{repInvController.CodToString(repInvController.ejemplarCod(e.ejemplarPK), 4, true)}">
+                        <h:outputText 
+                            value="#{repInvController.CodToString(repInvController.ejemplarCod(e.ejemplarPK), 4, true)}"/>
                     </p:column>
                     <p:column headerText="Nombre"
                               filterBy="#{e.recurso.nombre}">
@@ -121,10 +120,8 @@
                         <h:outputText value="#{e.ejemplarAnioDeIngreso}"/>
                     </p:column>
                     <p:column headerText="Estado Físico"  width="8%"
-                              filterBy="#{e.recurso.estadoFisico.equals('B')? 'BUENO' 
-                                          : (e.recurso.estadoFisico.equals('R')? 'REGULAR': '')}">
-                        <h:outputText value="#{e.recurso.estadoFisico.equals('B')? 'BUENO' 
-                                               : (e.recurso.estadoFisico.equals('R')? 'REGULAR': '')}"/>
+                              filterBy="#{e.recurso.estadoFisico.equals('B')? 'BUENO' : (e.recurso.estadoFisico.equals('R')? 'REGULAR': '')}">
+                        <h:outputText value="#{e.recurso.estadoFisico.equals('B')? 'BUENO' : (e.recurso.estadoFisico.equals('R')? 'REGULAR': '')}"/>
                     </p:column>
                     <p:column headerText="Valor Unitario" width="7%">
                         <h:outputText value="$#{e.recurso.valorUnitario}"/>
